added new cards and edit text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
                 <p>It's time to do your homework! You have to study to get those A++!</p>
             </div>
         </div>
+        <div class="card">
+            <div class="box">
+                <img src="img/code.png" alt="">
+            </div>
+            <div class="content-box">
+                <h2>Reboot!</h2>
+                <p>Please restart your computer in order for new programs to be install properly.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="box">
+                <img src="img/launch.png" alt="">
+            </div>
+            <div class="content-box">
+                <h2>Wakeup!</h2>
+                <p>It's time to get out of bed sleepy head!</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
