--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="content-box">
                 <h2>HomeWork!</h2>
                 <p>It's time to do your homework! You have to study to get those A++!</p>
+                <a href="#">Done</a>
             </div>
         </div>
         <div class="card">
@@ -27,6 +28,7 @@
             <div class="content-box">
                 <h2>Reboot!</h2>
                 <p>Please restart your computer in order for new programs to be install properly.</p>
+                <a href="#">Restart</a>
             </div>
         </div>
         <div class="card">
@@ -36,6 +38,7 @@
             <div class="content-box">
                 <h2>Wakeup!</h2>
                 <p>It's time to get out of bed sleepy head!</p>
+                <a href="#">Snooze</a>
             </div>
         </div>
     </div>
